--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 
     <div class="media-container">
         <p><strong>🎧Bài hát SAY NO TO DRUGS</strong></p>
-        <audio controls>
-            <source src="noi-khong-voi-ma-tuy.mp3" type="audio/mp3">
-        </audio>
+    <audio controls>
+        <source src="noi-khong-voi-ma-tuy.mp3" type="audio/mpeg">
+    </audio>
+        
     </div>
 
     <div class="content">
@@ -180,4 +181,5 @@
 
 </body>
 </html>
+
 
